# Siirtoaanivaali2022

./: .gitignore  README.md  pyproject.toml  testivaali.txt
dokumentaatio/: havaitut_ongelmat.md
siirtoaanivaali2022/: Ehdokas.py  Ehdokkaat.py  Lipuke.py  Lipukerivi.py  app.py  ehdokas.py  lipukerivi.py  lipukkeet.py  logic.py  opavote.py  vaali.py
