[tool.poetry]
name = "siirtoaanivaali2022"
version = "0.1.0"
description = ""
authors = ["Mari Karlsson <59450590+mkkarl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
